fixed hover functions on mobile

--- a/styles/phones.css
+++ b/styles/phones.css
@@ -109,11 +109,12 @@ li.nav a:hover:not(.active) {
     visibility: visible;
   }
 }
-
+/* HISTORIA GENERAL ----------------------------------------------------------- */
 p.historia{
-  font-size: .8rem;
+  font-size: 1rem;
   font-style: normal;
   font-weight: bold;
+  padding-top: 2rem;
   padding-left: 6.25rem;
   padding-right: 6.25rem;
   text-align: justify;
@@ -183,6 +184,7 @@ p.left{
   color: rgb(40, 155, 184);
   font-size: 2.125rem;
   text-align: center;
+  padding: inherit 0rem;
 }
 /* RECETAS */
 .container-general .gallery-wrap {
@@ -191,7 +193,7 @@ p.left{
   width: 100%;
   height: 20vh;
 }
-.wrap-effect-2 .item:hover {
+.wrap-effect-2 .item:active {
   transform: translate3d(0, 0, 100px);
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
   background-position: 50% 2rem;
